[package]
name = "halld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pico-args = "0.4.2"
anyhow = "1"
vpk0 = "0.8"
object = { version = "0.28.1", features = ["write_std", "elf"] }

[profile.dev.package.vpk0]
opt-level = 3
